--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,7 @@ build-backend = "hatchling.build"
 name = "caelestia"
 requires-python = ">=3.13"
 dynamic = ["version"]
-dependencies = [
-    "pillow",
-    "materialyoucolor"
-]
+dependencies = ["pillow", "materialyoucolor", "watchdog"]
 
 [project.scripts]
 caelestia = "caelestia:main"
