--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,15 @@ dependencies = [
     "materialyoucolor"
 ]
 
+[project.optional-dependencies]
+ocr = [
+    "rapidocr-onnxruntime>=1.3.0",
+    "onnxruntime>=1.16.0",
+    "PyQt6>=6.4.0",
+    "numpy>=1.24.0",
+    "threadpoolctl>=3.1.0"
+]
+
 [project.scripts]
 caelestia = "caelestia:main"
 
